--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>1.1.1</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
-        <spring.version>4.1.6.RELEASE</spring.version>
+        <spring.version>4.2.9.RELEASE</spring.version>
         <jackson.version>2.5.0</jackson.version>
     </properties>
     <dependencies>
@@ -89,6 +89,11 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
